crates/ir/tests/snapshots/lower_test__data_types__match_guard_or_pattern.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module data_types__match_guard_or_pattern

type Wrapper[a] = Some#0(a) | Wrap#1(a)
import core/peek/peek as peek(h) -> h
import core/list/last as last(List[u3]) -> Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5) -> List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool) -> List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1) -> y1
import core/list/map as map(List[y], (y) -> a1) -> List[a1]
import core/vec/to_list as to_list(Vec[c8]) -> List[c8]
import core/io/println as println(k) -> Unit
import core/option/Some as Some(e) -> Option[e]
import core/result/Ok as Ok(g) -> Result[f, g]
import core/result/Err as Err(f) -> Result[f, g]
import core/list/Cons as Cons(h, List[h]) -> List[h]
declare println: (k) -> Unit

fn extract(v0: Wrapper[Int]) -> Int =
  switch v0 {
    0 (v1: Int) ->
      let_join v5(v4: Bool) =
        if v4 {
          v1
        } else {
          0
        }
      in
      let v2: Dict[core/ord.Ord, Int] = get_dict core/ord.Ord[Int]
      let v3: Bool = trait_call core/ord.Ord.lt(v2, 0, v1)
      jump v5(v3)
    1 (v6: Int) ->
      let_join v10(v9: Bool) =
        if v9 {
          v6
        } else {
          0
        }
      in
      let v7: Dict[core/ord.Ord, Int] = get_dict core/ord.Ord[Int]
      let v8: Bool = trait_call core/ord.Ord.lt(v7, 0, v6)
      jump v10(v8)
    _ ->
      0
  }

fn main() -> Unit =
  let v11: ~Wrapper[Int] = construct Wrapper::Some#0(3)
  let v12: Int = call extract(v11)
  let v13: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v14: Unit = call println(v13, v12)
  let v15: ~Wrapper[Int] = construct Wrapper::Wrap#1(5)
  let v16: Int = call extract(v15)
  let v17: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v18: Unit = call println(v17, v16)
  let v20: ~Wrapper[Int] = construct Wrapper::Some#0(0)
  let v21: Int = call extract(v20)
  let v19: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v22: Unit = call println(v19, v21)
  v22
