crates/ir/tests/snapshots/lower_test__data_types__match_ir_patterns.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module data_types__match_ir_patterns

type Option[a] = Some#0(a) | None#1
import core/peek/peek as peek(e) -> e
import core/list/last as last(List[r3]) -> Option[r3]
import core/list/sort_by as sort_by(List[w5], (w5) -> l5) -> List[w5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[z7]) -> List[z7]
import core/io/println as println(h) -> Unit
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]

fn simple_match(v0: Option[Int]) -> Int =
  switch v0 {
    0 (v1: Int) ->
      v1
    1 ->
      0
  }

fn nested_match(v2: Option[Option[Int]]) -> Int =
  switch v2 {
    0 (v3: a) ->
      switch v3 {
        0 (v4: Int) ->
          v4
        1 ->
          let v5: Int = neg_int(1)
          v5
      }
    1 ->
      0
  }

fn wildcard_match(v6: Option[Int]) -> Int =
  switch v6 {
    0 (v7: Int) ->
      v7
    _ ->
      42
  }

fn literal_match(v8: Int) -> Int =
  let v10: Bool = eq_int(v8, 0)
  if v10 {
    100
  } else {
    let v9: Bool = eq_int(v8, 1)
    if v9 {
      200
    } else {
      300
    }
  }

fn let_tuple() -> Int =
  let v11: (~Int, ~Int) = tuple(1, 2)
  let v12: ~Int = tuple_project v11.0
  let v13: ~Int = tuple_project v11.1
  let v14: Int = add_int(v12, v13)
  v14

fn match_as_value(v15: Option[Int]) -> Int =
  let_join v19(v16: Int) =
    let v18: Int = add_int(v16, 1)
    v18
  in
  switch v15 {
    0 (v17: Int) ->
      jump v19(v17)
    1 ->
      jump v19(0)
  }
